swim_common/src/form/tests/derive/tag/fields.stderr
error: Tagged variants cannot contain fields
  --> $DIR/fields.rs:21:9
   |
21 |         B(i32),
   |         ^
